# htpc-cec-ctrl

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/: pkg.nix  shell.nix
src/: cec.rs  cgroup.rs  httpserver.rs  input.rs  main.rs
