[package]
name = "htpc-cec-ctrl"
version = "0.1.0"
edition = "2024"

[dependencies]
cec-rs = "12"
evdev = "0.13"
log = "0.4"
pretty_env_logger = "0.5"
hostname = "0.4"
hyper = { version = "1", features = ["server", "http1", "http2"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "net"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["server", "http1", "http2", "tokio"] }
system_shutdown = "4"